[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/enemies/champ_bullet.gd" type="Script" id=1]
[ext_resource path="res://sprites/bullets/bullet4-1.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[node name="champ_bullet" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.8, 0, 0, 2.8, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]

transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )
modulate = Color( 0.106461, 0.980469, 0.00765991, 1 )

[node name="hitbox" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/scale = Vector2( 2.8, 2.8 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="firepoint1" type="Position2D" parent="."]

transform/pos = Vector2( 0, -30 )

[node name="firepoint2" type="Position2D" parent="."]

transform/pos = Vector2( 20, -20 )

[node name="firepoint3" type="Position2D" parent="."]

transform/pos = Vector2( 30, 0 )

[node name="firepoint4" type="Position2D" parent="."]

transform/pos = Vector2( 20, 20 )

[node name="firepoint5" type="Position2D" parent="."]

transform/pos = Vector2( 0, 30 )

[node name="firepoint6" type="Position2D" parent="."]

transform/pos = Vector2( -20, 20 )

[node name="firepoint7" type="Position2D" parent="."]

transform/pos = Vector2( -30, 0 )

[node name="firepoint8" type="Position2D" parent="."]

transform/pos = Vector2( -20, -20 )


